infrastructure/dmarc-app/k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dmarc-app
  labels:
    app: dmarc-app
spec:
  selector:
    matchLabels:
      app: dmarc-app
  replicas: 1
  revisionHistoryLimit: 2
  minReadySeconds: 20
  template:
    metadata:
      labels:
        app: dmarc-app
    spec:
      securityContext:
        fsGroup: 65534
      terminationGracePeriodSeconds: 20
      containers:
      - name: dmarc-app
        image: dmarc-app:latest
        #args: {}
        ports:
        - name: http
          containerPort: 4000
        # need to enable this for minikube, if image is just present in minikube registry, but not remotely:
        imagePullPolicy: IfNotPresent
        volumeMounts:
#        - name: config-files
#          mountPath: '/etc/traefik/'
#          readOnly: true
        - name: dmarc-app-filestorage
          mountPath: '/mails'
          readOnly: false
        resources:
          requests:
            memory: 16Mi
          limits:
            memory: 384Mi
      volumes:
#      - name: config-files
#        configMap:
#          name: traefik-config
      - name: dmarc-app-filestorage
        persistentVolumeClaim:
          claimName: dmarc-app-filestorage

#  volumeClaimTemplates:
#  - metadata:
#      name: rabbitmq-data
#    spec:
#      accessModes:
#      - ReadWriteOnce
#      resources:
#        requests:
#          storage: 128Mi
