infrastructure/dmarc-app/k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dmarc-app
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    #traefik.ingress.kubernetes.io/router.middlewares: 'dmarc-dev-rewrite-path@kubernetescrd,dmarc-dev-forwardauth-authelia@kubernetescrd' # name of your middleware, as defined in your middleware.yml
    #traefik.ingress.kubernetes.io/router.middlewares: 'dmarc-dev-forwardauth-authelia@kubernetescrd' # name of your middleware, as defined in your middleware.yml
    traefik.ingress.kubernetes.io/router.tls: 'true'
  labels:
    router: traefik
spec:
  #ingressClassName: traefik
  rules:
  - host: 'dmarc.localhost'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dmarc-app
            port:
              name: http
